--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/pokeIcon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Pokedex App Challenge</title>
     <link href="/src/index.css" rel="stylesheet">
   </head>
   <body>
